ajout de l'impression au niveau du frontend

--- a/src/app/components/demandes/imprime-demande/imprime-demande.component.html
+++ b/src/app/components/demandes/imprime-demande/imprime-demande.component.html
@@ -18,7 +18,7 @@
         
         <div class="card-body">
             <div style="width:1000px; margin:0px auto">
-                <form [formGroup]="imprimeDemandeForm">
+                <!-- <form [formGroup]="imprimeDemandeForm"> -->
                     <div class="row card">
                         <div class="col-sm-12 mt-3">
                             <B><U>Objet:</U></B> demande d'une permission d'absence
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     
-                </form>
+                <!-- </form> -->
                 <hr/>
 
                 <div class="footer col-sm-12 mt-2 ms-1 text-end">
