--- a/src/app/components/demandes/create-demande/create-demande.component.html
+++ b/src/app/components/demandes/create-demande/create-demande.component.html
@@ -51,9 +51,10 @@
                                                 <option [selected]="true" value="">--séctionner service --</option>
                                                 <option value="Secretariat Particulier CSA">SP CSA</option>
                                                 <option value="Brigade Spéciale">BS</option>
-                                                <option value="1ere Brigade">Brigade 1</option>
-                                                <option value="2eme Brigade">Brigade 2</option>
-                                                <option value="3eme Brigade">Brigade 3</option>                                                  
+                                                <option value="1ere Brigade d'arraisonnement">Brigade 1</option>
+                                                <option value="2eme Brigade d'arraisonnement">Brigade 2</option>
+                                                <option value="3eme Brigade d'arraisonnement">Brigade 3</option> 
+                                                <option value="Centre de Monitoring et de Profiling du CSA">CMP/AIBD</option>
                                             </select>
                                      
                             </div>
